Fix horizontal overflow issues on large screens - Remove overflow-x: hidden to body/html - Remove fixed margin-left values for carousel arrows - Remove excessive padding-right from footer and logo

--- a/design.css
+++ b/design.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=GFS+Didot&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-body{
+html, body{
     margin: 0;
     padding: 0;
     font-family: Poppins;
+    overflow-x: hidden;
 }
 
 nav{
@@ -43,10 +44,7 @@ nav{
     justify-content: center;
     align-items: center;
     /* position: absolute; */
-    padding-right: 210px;
     /* margin-left: 50%; */
-
-
 }
 
 .mainHead {
@@ -1754,7 +1752,6 @@ header{
     max-width: 1400px;
     margin: 0 auto;
     padding-bottom: 50px;
-    padding-right: 300px;
 }
 
 .footer-col{
@@ -2663,10 +2660,6 @@ header{
         height: 60vh;
     }
     
-    #right{
-        margin-left: 1200px;
-    }
-    
     /* Row 1 - Specs */
     .row1{
         padding: 30px 40px;
@@ -2745,10 +2738,6 @@ header{
     /* Carousel */
     #carousel{
         height: 50vh;
-    }
-    
-    #right{
-        margin-left: 900px;
     }
     
     #arrow svg{
